[gd_scene load_steps=16 format=2]

[ext_resource path="res://addons/audio_station/volume.png" type="Texture" id=1]
[ext_resource path="res://addons/audio_station/TransitionEnd.png" type="Texture" id=2]
[ext_resource path="res://addons/audio_station/audio_station.gd" type="Script" id=3]
[ext_resource path="res://addons/spectrum_analyzer/AudioBusLayout.png" type="Texture" id=4]
[ext_resource path="res://addons/audio_station/forward.png" type="Texture" id=5]
[ext_resource path="res://addons/audio_station/audio_station.png" type="Texture" id=6]
[ext_resource path="res://addons/audio_station/AssetLib.png" type="Texture" id=7]
[ext_resource path="res://addons/audio_station/volume100.png" type="Texture" id=8]

[sub_resource type="InputEventKey" id=10]
control = true
command = true
scancode = 70

[sub_resource type="ShortCut" id=11]
shortcut = SubResource( 10 )

[sub_resource type="InputEventKey" id=8]
control = true
command = true
scancode = 83

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="StyleBoxTexture" id=12]
texture = ExtResource( 8 )
region_rect = Rect2( 0, 0, 100, 16 )

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[node name="AudioStation" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -782.0
rect_min_size = Vector2( 100, 0 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 209.0
margin_bottom = 293.0

[node name="HFlowContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 202.0
margin_bottom = 24.0

[node name="MenuButton" type="MenuButton" parent="VBoxContainer/HFlowContainer"]
margin_right = 28.0
margin_bottom = 24.0
icon = ExtResource( 6 )
items = [ "Load", ExtResource( 7 ), 0, false, false, 0, 0, null, "", false, "Spectrum analyzer", ExtResource( 4 ), 0, false, false, 1, 0, null, "", false ]

[node name="Load" type="Button" parent="VBoxContainer/HFlowContainer"]
margin_left = 32.0
margin_right = 60.0
margin_bottom = 24.0
icon = ExtResource( 7 )

[node name="FastForward" type="Button" parent="VBoxContainer/HFlowContainer"]
margin_left = 64.0
margin_right = 92.0
margin_bottom = 24.0
hint_tooltip = "fast forward"
toggle_mode = true
shortcut = SubResource( 11 )
icon = ExtResource( 5 )

[node name="Advance" type="HBoxContainer" parent="VBoxContainer/HFlowContainer"]
margin_left = 96.0
margin_right = 202.0
margin_bottom = 24.0

[node name="AdvanceShuffle" type="SpinBox" parent="VBoxContainer/HFlowContainer/Advance"]
margin_right = 74.0
margin_bottom = 24.0
max_value = 1.0
value = 1.0
prefix = "adv."

[node name="Skip" type="Button" parent="VBoxContainer/HFlowContainer/Advance"]
margin_left = 78.0
margin_right = 106.0
margin_bottom = 24.0
hint_tooltip = "skip"
shortcut = SubResource( 9 )
icon = ExtResource( 2 )

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
margin_top = 28.0
margin_right = 202.0
margin_bottom = 258.0
rect_min_size = Vector2( 0, 16 )
size_flags_vertical = 3
select_mode = 1
max_columns = 0
same_column_width = true
fixed_column_width = 256

[node name="Volume" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 262.0
margin_right = 202.0
margin_bottom = 286.0
size_flags_horizontal = 3

[node name="Volume" type="CheckBox" parent="VBoxContainer/Volume"]
margin_right = 40.0
margin_bottom = 24.0
hint_tooltip = "volume"
pressed = true
icon = ExtResource( 1 )

[node name="VolumeSlider" type="HSlider" parent="VBoxContainer/Volume"]
margin_left = 44.0
margin_right = 202.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
hint_tooltip = "0 DB"
size_flags_horizontal = 3
custom_styles/slider = SubResource( 12 )
custom_styles/grabber_area_highlight = SubResource( 13 )
custom_styles/grabber_area = SubResource( 14 )
min_value = 0.01
max_value = 1.0
step = 0.02
value = 1.0
__meta__ = {
"_editor_description_": ""
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_right = 469.0
margin_bottom = 300.0
window_title = "Open File(s)"
mode = 1
access = 2
filters = PoolStringArray( "*.ogg" )

[node name="ResourcePreloader" type="ResourcePreloader" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="VBoxContainer/HFlowContainer/Load" to="." method="_on_Load_pressed"]
[connection signal="toggled" from="VBoxContainer/HFlowContainer/FastForward" to="." method="_on_FastForward_toggled"]
[connection signal="value_changed" from="VBoxContainer/HFlowContainer/Advance/AdvanceShuffle" to="." method="_on_AdvanceShuffle_value_changed"]
[connection signal="pressed" from="VBoxContainer/HFlowContainer/Advance/Skip" to="." method="_on_Skip_pressed"]
[connection signal="item_activated" from="VBoxContainer/ItemList" to="." method="_on_ItemList_item_activated"]
[connection signal="toggled" from="VBoxContainer/Volume/Volume" to="." method="_on_Volume_toggled"]
[connection signal="value_changed" from="VBoxContainer/Volume/VolumeSlider" to="." method="_on_Volume_value_changed"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_FileDialog_files_selected"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
